--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "backend2",
   "version": "1.0.0",
   "main": "index.js",
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
@@ -12,11 +11,10 @@
   "author": "Oluwaseun Oloto",
   "license": "ISC",
   "description": "",
-
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.15.0"
   },
-
   "devDependencies": {
     "nodemon": "^3.1.10"
   }
